private office fixs

--- a/private/authorization.html
+++ b/private/authorization.html
@@ -63,7 +63,7 @@
 					<ul class="call-center-holder">
 						<li><h3>Центр Підтримки</h3></li>
 						<li><span>пн-пт: 9:00 - 18:00</span></li>
-						<li><a href="#">зворотний дзвінок</a></li>
+						<li><a href="#">зворотній зв'язок</a></li>
 					</ul>
 				</div>
 			</div>
