--- a/private/kids-products.html
+++ b/private/kids-products.html
@@ -46,7 +46,7 @@
 						<li><a href="#">ru</a></li>
 					</ul>
 					<div class="btn-large square">
-						<a href="#" class="hr-exit hr-large"></a>
+						<a href="#" class="icon hr-exit">Вихід</a>
 					</div>
 					<ul class="office-widget">
 						<li>
@@ -74,7 +74,7 @@
 					<ul class="call-center-holder">
 						<li><h3>Центр Підтримки</h3></li>
 						<li><span>пн-пт: 9:00 - 18:00</span></li>
-						<li><a href="#">зворотний дзвінок</a></li>
+						<li><a href="#">зворотній зв'язок</a></li>
 					</ul>
 				</div>
 			</div>
@@ -107,15 +107,16 @@
 							<li><a href="#">Продукты</a></li>
 						</ul>
 					</div>
-					<div class="categories-panel-holder">
-						<h2>Сергей: список продуктов</h2>
-						<ul>
-							<li class="active"><a href="#">Разрешенные</a></li>
-							<li><a href="#">Запрешенные</a></li>
-						</ul>
-					</div>
+
 					<div class="outer scrollable-holder products-holder">
 						<div class="inner scrollable">
+							<div class="categories-panel-holder">
+								<h2>Сергей: список продуктов</h2>
+								<ul>
+									<li class="active"><a href="#">Разрешенные</a></li>
+									<li><a href="#">Запрешенные</a></li>
+								</ul>
+							</div>
 							<!--disable-active or enable-active class to activate btns(apply on grid)-->
 							<div class="grid">
 								<div class="row">
