--- a/private/kids.html
+++ b/private/kids.html
@@ -46,7 +46,7 @@
 						<li><a href="#">ru</a></li>
 					</ul>
 					<div class="btn-large square">
-						<a href="#" class="hr-exit hr-large"></a>
+						<a href="#" class="icon hr-exit">Вихід</a>
 					</div>
 					<ul class="office-widget">
 						<li>
@@ -74,7 +74,7 @@
 					<ul class="call-center-holder">
 						<li><h3>Центр Підтримки</h3></li>
 						<li><span>пн-пт: 9:00 - 18:00</span></li>
-						<li><a href="#">зворотний дзвінок</a></li>
+						<li><a href="#">зворотній зв'язок</a></li>
 					</ul>
 				</div>
 			</div>
@@ -120,10 +120,10 @@
 											</div>
 											<ul>
 												<li>
-													<p><span>Школа: </span>Школа №13</p>
+													<p><span>Населенный пункт: </span>Киев</p>
 												</li>
 												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
+													<p><span>Школа: </span>Школа №13</p>
 												</li>
 												<li>
 													<p><span>Баланс: </span>115,00 грн.</p>
@@ -145,62 +145,10 @@
 											</div>
 											<ul>
 												<li>
-													<p><span>Школа: </span>Школа №13</p>
+													<p><span>Населенный пункт: </span>Киев</p>
 												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
-								</div>
-								<div class="row">
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-male"></span>Сергей</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
 												<li>
 													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
-												</li>
-												<li>
-													<p><span>Баланс: </span>115,00 грн.</p>
-												</li>
-												<li>
-													<p><span>Дневной лимит: </span>45,00 грн.</p>
-												</li>
-											</ul>
-											<div class="btn-more">
-												<a href="#">подробнее</a>
-											</div>
-										</div>
-									</article>
-									<article class="col">
-										<div class="inner">
-											<div class="title-holder">
-												<h2><span class="icon hr-female"></span>Мария</h2>
-												<span class="sprtr-h"></span>
-											</div>
-											<ul>
-												<li>
-													<p><span>Школа: </span>Школа №13</p>
-												</li>
-												<li>
-													<p><span>Адрес: </span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolore neque distinctio non.</p>
 												</li>
 												<li>
 													<p><span>Баланс: </span>115,00 грн.</p>
@@ -222,20 +170,6 @@
 						<div id="pagination-holder">
 							<ul>
 								<li class="active"><a href="">1</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="">11</a></li>
-								<li><a href="">12</a></li>
-								<li><a href="">13</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="">21</a></li>
 							</ul>
 						</div>
 					</div>
