--- a/private/personal.html
+++ b/private/personal.html
@@ -46,7 +46,7 @@
 						<li><a href="#">ru</a></li>
 					</ul>
 					<div class="btn-large square">
-						<a href="#" class="hr-exit hr-large"></a>
+						<a href="#" class="icon hr-exit">Вихід</a>
 					</div>
 					<ul class="office-widget">
 						<li>
@@ -74,7 +74,7 @@
 					<ul class="call-center-holder">
 						<li><h3>Центр Підтримки</h3></li>
 						<li><span>пн-пт: 9:00 - 18:00</span></li>
-						<li><a href="#">зворотний дзвінок</a></li>
+						<li><a href="#">зворотній зв'язок</a></li>
 					</ul>
 				</div>
 			</div>
@@ -110,8 +110,12 @@
 							<article class="personal-data-holder">
 								<div class="inner">
 									<h2>Персональная информация</h2>
-									<h3>Петров Петр Петрович</h3>
 									<div class="info-holder">
+										<h3>Петров Петр Петрович</h3>
+										<div class="col">
+											<span><span class="icon hr-coin"></span>Баланс на счету</span>
+											<p>675,25 грн.</p>
+										</div>
 										<div class="col">
 											<span><span class="icon hr-phone"></span>Телефон</span>
 											<p>+38 (044) 999-9999</p>
@@ -121,19 +125,14 @@
 											<p>p.petrov@gmail.com</p>
 										</div>
 									</div>
-									<div class="info-holder">
-										<div class="col">
-											<span><span class="icon hr-coin"></span>Баланс на счету</span>
-											<p>675,25 грн.</p>
-										</div>
-									</div>
-									<div class="kids-holder">
+									<div class="info-holder kids">
 										<h3>Мои дети</h3>
-										<span class="sprtr-h"></span>
-										<ul>
-											<li><a href="#"><span class="icon hr-male"></span>Сергей</a></li>
-											<li><a href="#"><span class="icon hr-female"></span>Мария</a></li>
-										</ul>
+										<div class="col">
+											<a href="#"><span class="icon hr-male"></span>Сергей</a>
+										</div>
+										<div class="col">
+											<a href="#"><span class="icon hr-female"></span>Мария</a>
+										</div>
 									</div>
 								</div>
 							</article>
