--- a/private/stats.html
+++ b/private/stats.html
@@ -46,7 +46,7 @@
 						<li><a href="#">ru</a></li>
 					</ul>
 					<div class="btn-large square">
-						<a href="#" class="hr-exit hr-large"></a>
+						<a href="#" class="icon hr-exit">Вихід</a>
 					</div>
 					<ul class="office-widget">
 						<li>
@@ -119,6 +119,9 @@
 								<table>
 									<tr>
 										<th>
+											<a href="#">Имя ребенка</a>
+										</th>
+										<th>
 											<span>Наименование</span>
 										</th>
 										<th>
@@ -132,155 +135,182 @@
 										</th>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
-										<td><span>Венский пирог - яблоко</span></td>
-										<td><span>27.10.2015</span></td>
-										<td><span>12,50грн.</span></td>
-									</tr>
-									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Сергей</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
 										<td><span>12,50грн.</span></td>
 									</tr>
 									<tr>
+										<td><span>Мария</span></td>
+										<td><span>Венский пирог - яблоко</span></td>
+										<td><span>Бисквит-шоколад</span></td>
+										<td><span>27.10.2015</span></td>
+										<td><span>12,50грн.</span></td>
+									</tr>
+									<tr>
+										<td><span>Мария</span></td>
 										<td><span>Венский пирог - яблоко</span></td>
 										<td><span>Бисквит-шоколад</span></td>
 										<td><span>27.10.2015</span></td>
