--- a/private/kids-stats.html
+++ b/private/kids-stats.html
@@ -46,7 +46,7 @@
 						<li><a href="#">ru</a></li>
 					</ul>
 					<div class="btn-large square">
-						<a href="#" class="hr-exit hr-large"></a>
+						<a href="#" class="icon hr-exit">Вихід</a>
 					</div>
 					<ul class="office-widget">
 						<li>
@@ -74,7 +74,7 @@
 					<ul class="call-center-holder">
 						<li><h3>Центр Підтримки</h3></li>
 						<li><span>пн-пт: 9:00 - 18:00</span></li>
-						<li><a href="#">зворотний дзвінок</a></li>
+						<li><a href="#">зворотній зв'язок</a></li>
 					</ul>
 				</div>
 			</div>
