top panel fixes in private office

--- a/private/kids-detailed.html
+++ b/private/kids-detailed.html
@@ -106,7 +106,7 @@
 							<li><a href="#">Личные данные Сергея</a></li>
 						</ul>
 					</div>
-					<div class="outer scrollable-holder no-action-panel">
+					<div class="outer scrollable-holder no-action-panel kid-view">
 						<div class="inner scrollable">
 							<article class="personal-data-holder">
 								<div class="inner">
