--- a/private/kids-stats.html
+++ b/private/kids-stats.html
@@ -98,7 +98,7 @@
 						</div>
 					</div>
 				</aside>
-				<section id="content-info-holder">
+				<section id="content-info-holder" class="kid-stats-holder">
 					<div id="breadcrumbs">
 						<ul>
 							<li><a href="#">Личный кабинет<span class="hr-right-arrow"></span></a></li>
@@ -107,9 +107,11 @@
 							<li><a href="#">Статистика</a></li>
 						</ul>
 					</div>
+					<div class="action-panel-holder top">
+						<h2>Сергей: статистика покупок</h2>
+					</div>
 					<div class="outer scrollable-holder">
 						<div class="inner scrollable">
-							<h2>Сергей: статистика покупок</h2>
 							<div class="table-holder">
 								<table>
 									<tr>
@@ -242,7 +244,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="action-panel-holder">
+					<div class="action-panel-holder bottom">
 						<div id="pagination-holder">
 							<ul>
 								<li class="active"><a href="#">1</a></li>
