--- a/private/stats.html
+++ b/private/stats.html
@@ -105,13 +105,15 @@
 							<li><a href="#">Статистика</a></li>
 						</ul>
 					</div>
-					<div class="categories-panel-holder">
+					<div class="action-panel-holder top">
 						<h2>Статистика покупок ваших детей</h2>
-						<ul>
-							<li class="active"><a href="#">Все</a></li>
-							<li><a href="#"><span class="icon hr-male"></span>Сергей</a></li>
-							<li><a href="#"><span class="icon hr-female"></span>Мария</a></li>
-						</ul>
+						<div class="categories-panel-holder">
+							<ul>
+								<li class="active"><a href="#">Все</a></li>
+								<li><a href="#"><span class="icon hr-male"></span>Сергей</a></li>
+								<li><a href="#"><span class="icon hr-female"></span>Мария</a></li>
+							</ul>
+						</div>
 					</div>
 					<div class="outer scrollable-holder">
 						<div class="inner scrollable">
@@ -320,7 +322,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="outer action-panel-holder">
+					<div class="action-panel-holder bottom">
 						<div id="pagination-holder">
 							<ul>
 								<li class="active"><a href="">1</a></li>
