--- a/private/kids-products.html
+++ b/private/kids-products.html
@@ -98,7 +98,7 @@
 						</div>
 					</div>
 				</aside>
-				<section id="content-info-holder">
+				<section id="content-info-holder" class="kid-products-holder">
 					<div id="breadcrumbs">
 						<ul>
 							<li><a href="#">Личный кабинет<span class="hr-right-arrow"></span></a></li>
@@ -107,151 +107,115 @@
 							<li><a href="#">Продукты</a></li>
 						</ul>
 					</div>
-
-					<div class="outer scrollable-holder products-holder">
-						<div class="inner scrollable">
-							<div class="categories-panel-holder">
-								<h2>Сергей: список продуктов</h2>
-								<ul>
-									<li class="active"><a href="#">Разрешенные</a></li>
-									<li><a href="#">Запрешенные</a></li>
-								</ul>
-							</div>
-							<!--disable-active or enable-active class to activate btns(apply on grid)-->
-							<div class="grid">
-								<div class="row">
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-								</div>
-								<div class="row">
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-								</div>
-								<div class="row">
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-									<article class="col">
-										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-										<h2>Венский пирог - яблоко</h2>
-										<div class="info">
-											<span class="weight">125г.</span>
-											<span class="price">12,50грн.</span>
-										</div>
-										<div class="btn-disable">
-											<a href="#">Запретить</a>
-										</div>
-									</article>
-								</div>
-							</div>
-							<!--apply class active to btn-->
-							<div class="btn-disable">
-								<a href="#">Запретить продукты</a>
-							</div>
-						</div>
-					</div>
-					<div class="action-panel-holder">
-						<div id="pagination-holder">
+					<div class="action-panel-holder top">
+						<h2>Сергей: список продуктов</h2>
+						<p>Отметьте товары которые хотите запретить и сохраните изменения</p>
+						<div class="categories-panel-holder">
 							<ul>
-								<li><a href="#">1</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="#">11</a></li>
-								<li><a href="#">12</a></li>
-								<li><a href="#">13</a></li>
-								<li>
-									<span class="dot"></span>
-									<span class="dot"></span>
-									<span class="dot"></span>
-								</li>
-								<li><a href="#">21</a></li>
+								<li class="active"><a href="#">Разрешенные</a></li>
+								<li><a href="#">Запрешенные</a></li>
 							</ul>
 						</div>
+						<button type="submit" for="forbid-products-form">
+							<span>Сохранить изменения</span>
+						</button>
 					</div>
+					<div class="outer scrollable-holder">
+						<div class="inner scrollable">
+							<div class="grid triple-col">
+								<h3>Кондитерские изделия</h3>
+								<span class="sprtr-h"></span>
+								<div class="row">
+									<input type="checkbox" name="forbid-product-1" value="" id="forbid-product-1" form="forbid-products-form">
+									<label for="forbid-product-1" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-2" value="" id="forbid-product-2" form="forbid-products-form">
+									<label for="forbid-product-2" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-3" value="" id="forbid-product-3" form="forbid-products-form">
+									<label for="forbid-product-3" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+								</div>
+								<div class="row">
+									<input type="checkbox" name="forbid-product-4" value="" id="forbid-product-4" form="forbid-products-form">
+									<label for="forbid-product-4" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-5" value="" id="forbid-product-5" form="forbid-products-form">
+									<label for="forbid-product-5" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-6" value="" id="forbid-product-6" form="forbid-products-form">
+									<label for="forbid-product-6" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+								</div>
+								<div class="row">
+									<input type="checkbox" name="forbid-product-7" value="" id="forbid-product-7" form="forbid-products-form">
+									<label for="forbid-product-7" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-8" value="" id="forbid-product-8" form="forbid-products-form">
+									<label for="forbid-product-8" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+									<input type="checkbox" name="forbid-product-9" value="" id="forbid-product-9" form="forbid-products-form">
+									<label for="forbid-product-9" class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
+					<form action="#" method="POST" id="forbid-products-form"></form>
 				</section>
 			</div>
 		</main>
