home page fix's

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 					<span class="sprtr-h"></span>
 					<p>Дитина веде активний спосіб життя та постійні перекуси - частина його щоденного раціону. Ми розуміємо, що шкільні їдальні можуть надати повноцінний обід, але протягом навчального дня діти завжди встигають з'їсти що-небудь ще.</p>
 					<p>Найчастіше це: Чіпси, Шоколад, так звані Хот доги (майонез, кетчуп), які дитина запиває солодкою газованою водою. Ці продукти, що негативно впливають на дитячий організм, найчастіше можна купити навіть по дорозі до школи. Тому дуже важливо знати, що їсть ваша дитина поки знаходиться у школі. Ми виключаємо продаж шкідливих продуктів харчування.</p>
+					<p>Європейська система здорового шкільного харчування – це не лише повноцінний обід, але й декілька перекусів корисними та свіжими продуктами, яких в шкільних буфетах найчастіше просто немає. Ми вирішуємо цю проблему, та пропонуємо якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета. Повністю контролюйте щоденний раціон дитини за допомогою інформаційних повідомлень на мобільний телефон, встановлюючи ліміт на щоденні витрати.</p>
 					<div class="benefits-holder">
 						<ul>
 							<li>
@@ -143,7 +144,6 @@
 							</li>
 						</ul>
 					</div>
-					<p>Європейська система здорового шкільного харчування – це не лише повноцінний обід, але й декілька перекусів корисними та свіжими продуктами, яких в шкільних буфетах найчастіше просто немає. Ми вирішуємо цю проблему, та пропонуємо якісні та сертифіковані продукти харчування для перекусу, які Ваша дитина може придбати у торгівельному автоматі за допомогою безконтактної картки або браслета. Повністю контролюйте щоденний раціон дитини за допомогою інформаційних повідомлень на мобільний телефон, встановлюючи ліміт на щоденні витрати.</p>
 					<div id="watch-movie">
 						<a href="#">
 							<span class="hr-play hr-large"></span>
@@ -154,67 +154,70 @@
 			</section>
 			<section class="outer suppliers-holder">
 				<div class="inner">
-					<h2>Виробники</h2>
+					<h2>Наші продукти</h2>
 					<span class="sprtr-h"></span>
 					<ul class="suppliers">
 						<li>
 							<figure>
-								<a href="suppliers-biskvit-shokolad.html"><img src="build/images/suppliers/biskvit-shokolad.png" alt="ХАРКІВСЬКА БІСКВІТНА ФАБРИКА"></a>
+								<a href="#">
+									<img src="build/images/suppliers/nash-sik.png" alt="Наш сок">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="suppliers-econia.html"><img src="build/images/suppliers/ekoniya.png" alt="ЕКОНІЯ"></a>
+								<a href="#">
+									<img src="build/images/suppliers/jaffa.png" alt="Jaffa">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/ginger.png" alt="Джиджер">
+								<a href="#">
+									<img src="build/images/suppliers/teen-team.png" alt="Teen Team">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/nash-sik.png" alt="Наш сік">
+								<a href="#">
+									<img src="build/images/suppliers/biskvit-shokolad.png" alt="Бисквит-шоколад">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<img src="build/images/suppliers/jaffa.png" alt="Jaffa juice">
+								<a href="#">
+									<img src="build/images/suppliers/tekmar.png" alt="Текмар">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="suppliers-kvartet.html"><img src="build/images/suppliers/kvartet.png" alt="Квартет"></a>
+								<a href="#">
+									<img src="build/images/suppliers/ramonka.png" alt="Рамонка">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="suppliers-ramonka.html"><img src="build/images/suppliers/ramonka.png" alt="Рамонка"></a>
+								<a href="#">
+									<img src="build/images/suppliers/arsenal.png" alt="Арсенал-пак">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="suppliers-sergio.html"><img src="build/images/suppliers/sergio.png" alt="Sergio"></a>
+								<a href="#">
+									<img src="build/images/suppliers/frucfetta.png" alt="Фрук Фетта">
+								</a>
 							</figure>
 						</li>
 						<li>
 							<figure>
-								<a href="suppliers-solodkiy-svit.html"><img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ"></a>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<img src="build/images/suppliers/teen-team.png" alt="Teen Team">
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<a href="suppliers-vitmark.html"><img src="build/images/suppliers/vitmark.png" alt="Vitmark"></a>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<a href="suppliers-cherkasu-hlib.html"><img src="build/images/suppliers/cherkasy-hlib.png" alt="ЧеркасиХліб"></a>
+								<a href="#">
+									<img src="build/images/suppliers/ginger.png" alt="Джин Джер">
+								</a>
 							</figure>
 						</li>
 					</ul>
@@ -229,14 +232,14 @@
 							<span class="hr-get-card hr-small"></span>
 							<span class="sprtr-h"></span>
 							<h3>Як отримати картку або браслет</h3>
-							<p>Отримайте та заповніть анкету у школі, де навчається Ваша дитина. Здайте заповнену анкету представнику у школі та отримайте картку, або браслет.</p>
+							<p>Браслет або картку «Дорога Здоров’я» Ви можете отримати у будь-який момент поштою, заповнивши нашу анкету у школі, або на сайті нашої компанії.</p>
 							<a href="project-get-card.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
 							<span class="hr-add-money hr-small"></span>
 							<span class="sprtr-h"></span>
 							<h3>Як поповнювати картку або браслет</h3>
-							<p>Поповнити картку або браслет можна у будь-якому відділенні банку або у відділенні Укрпошти.</p>
+							<p>Поповнити картку або браслет можна у будь-якому відділенні Приват-банку, у  терміналі самообслуговування, кредитною карткою або у будь-якому відділенні Укрпошти.</p>
 							<a href="project-card-refill.html">докладніше<span class="long-arrow"></span></a>
 						</li>
 						<li>
@@ -259,13 +262,12 @@
 						<span class="sprtr-h"></span>
 						<ul>
 							<li>
-								<span class="item"><span class="hr-pin"></span>03002, м. Київ, вул. Ярославів Вал 13/2</span>
+								<span class="item"><span class="hr-pin"></span>01054, Київ-54, А/С 12</span>
 							</li>
 							<li>
-								<span class="item"><span class="hr-shedule"></span>пн.-пт. 9:00 - 18:00</span>
-							</li>
-							<li>
-								<span class="item"><span class="hr-phone"></span>+38 (044) 999 9999</span>
+								<span class="item"><span class="hr-mtc"></span>+38 (066) 539 3939</span>
+								<span class="item"><span class="hr-kstar"></span>+38 (068) 539 3939</span>
+								<span class="item"><span class="hr-life"></span>+38 (063) 539 3939</span>
 							</li>
 							<li>
 								<span class="item"><span class="hr-email"></span>info@kdz.com.ua</span>
